# gigathon

animacja/: .gitignore  CMakeLists.txt  README.md  animacja.txt
animacja/frames/: 11.txt  12.txt  13.txt  14.txt  2.txt  4.txt  5.txt  6.txt  7.txt  9.txt
animacja/klatki/: 1.txt  10.txt  15.txt  3.txt  8.txt
animacja/src/: Animation.cpp  Animation.hpp  App.cpp  App.hpp  Frame.cpp  Frame.hpp  Renderer.cpp  Renderer.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
memory/: .gitignore  CMakeLists.txt  README.md
memory/src/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp  Player.cpp  Player.hpp  UserInterface.cpp  UserInterface.hpp  common.hpp  main.cpp
